--- a/index.html
+++ b/index.html
@@ -115,6 +115,26 @@
         </div>
 
 
+        <div class="mt-12">
+          <div class="overflow-x-auto">
+            <table class="table">
+              <!-- head -->
+              <thead>
+                <tr>
+                  <th>Person</th>
+                  <th>Citizenship</th>
+                  <th>Industry</th>
+                  <th>Rank</th>
+                  <th>Wealth</th>
+                </tr>
+              </thead>
+              <tbody id="table-body">
+              </tbody>
+            </table>
+          </div>
+        </div>
+
+
 
 
 
