--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         </div>
 
         <div class="flex flex-col justify-center items-center space-y-4 mx-auto mt-8">
-            <button class="btn bg-gray-300 w-[90%] mx-auto">
+            <button onclick="userBtn()" id="user-btn" class="btn bg-gray-300 w-[90%] mx-auto">
                 <div>
                     <h4 class="text-lg font-bold">Add a user</h4>
                 <p class="text-sm">(Randomly)</p>
